--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-*{
+body{
     padding:0;
     margin:0;
     background: rgba(255,106,0,1);
@@ -20,4 +20,38 @@ h1{
     width: 25%;
     float: left;
     margin: 60px;
+}
+.column{
+    background-color: white;
+}
+.icon{
+    text-align: center;
+    font-size: 40px;
+    color: rgba(255,106,0,1); ;
+}
+.header h3{
+    margin:  0px 0 10px 0;
+    text-align: center;
+    font-size: 24px;
+    color: grey;
+}
+.textDecoration p{
+    text-align: center;
+    color: grey;
+    padding-bottom: 30px;
+}
+hr{
+    width: 30%;
+}
+.image{
+    text-align: center;
+    margin: 20px 0px;;
+}
+.image img{
+    width: 120px;
+    height: 90px;
+}
+.cost h2{
+    font-size: 27px;
+    text-align: center;
 }
