--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 body{
     padding:0;
     margin:0;
@@ -20,9 +21,12 @@ h1{
     width: 25%;
     float: left;
     margin: 60px;
-}
-.column{
+    height: 500px;
+    border-radius: 20px;
     background-color: white;
+}
+.column.infoTwo{
+    height: 530px;
 }
 .icon{
     text-align: center;
@@ -35,23 +39,65 @@ h1{
     font-size: 24px;
     color: grey;
 }
+.header h3.free{
+    margin-top: -10px;
+}
+.header h3.premium{
+
+}
 .textDecoration p{
     text-align: center;
     color: grey;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
 }
 hr{
     width: 30%;
 }
 .image{
     text-align: center;
-    margin: 20px 0px;;
+    margin: 15px 0px;;
 }
 .image img{
     width: 120px;
     height: 90px;
 }
 .cost h2{
-    font-size: 27px;
+    font-size: 40px;
     text-align: center;
+    color:rgba(255,106,0,1);
+    font-weight: normal;
+    font-family: 'Quicksand', sans-serif;
+}
+.cost p{
+    text-align: center;
+    margin-top: -30px;
+    font-size: 12px;
+    color: gray;
+}
+.button {
+    text-align: center;
+    margin: 35px 0px;
+}
+.button a{
+    text-decoration:none;
+    border: 3px solid #66ccda;
+    padding: 5px 40px;
+    background: #66ccda;
+    border-radius: 25px;
+    color: white;
+}
+.buttonTwo{
+    text-align: center;
+    margin: 35px 0px;
+}
+.buttonTwo a{
+    text-decoration:none;
+    border: 3px solid rgba(255,106,0,1);;
+    padding: 5px 40px;
+    background: rgba(255,106,0,1);;
+    border-radius: 25px;
+    color: white;
+    -webkit-box-shadow: 2px 15px 66px 3px rgba(255,106,0,0.54);
+    -moz-box-shadow: 2px 15px 66px 3px rgba(255,106,0,0.54);
+    box-shadow: 2px 15px 66px 3px rgba(255,106,0,0.54);
 }
