--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,11 @@ h1{
     font-size: 35px;
     letter-spacing: 4px;
 }
-
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .row:after{
     content: "";
     display: table;
