--- a/style/style.css
+++ b/style/style.css
@@ -161,3 +161,37 @@ hr{
     -moz-box-shadow: 2px 13px 63px -7px rgba(0,0,0,0.75);
     box-shadow: 2px 13px 63px -7px rgba(0,0,0,0.75);
 }
+/*Responsiveness*/
+/*Tablet*/
+@media(max-width:823px){
+.row{
+    display: block;
+}
+.column.infoTwo{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    box-shadow: none;
+}
+.column.column.infoTwo .tabletInfoOne{
+    width: 350px;
+    background-color: white;
+    border-radius: 20px;
+    height: 550px;
+    box-shadow: 2px 13px 63px -7px rgba(0,0,0,0.75);
+}
+.column{
+    margin:15px;
+    
+}
+.column.infoOne, .column.infoThree{
+    position: relative;
+    top: 600px;
+    width: 45%;
+}
+}
