--- a/style/style.css
+++ b/style/style.css
@@ -255,3 +255,14 @@ hr{
         font-size: 30px;
     }
 }
+@media(max-width:220px){
+    .textDecoration p {
+        padding: 0 20px;
+    }
+    .button a {
+        padding: 5px 10px;
+    }
+    .buttonThree a {
+        padding: 5px 10px;
+    }
+}
