--- a/style/style.css
+++ b/style/style.css
@@ -196,6 +196,8 @@ hr{
 }
 }
 /*Mobile responsiveness*/
+
+/*Free & Plus*/
 @media(max-width:599px){
     .column{
         width: 100%;
@@ -209,6 +211,9 @@ hr{
         align-items: center;
         justify-content: center;
         top: 1150px;
+    }
+    .column.column.infoTwo .tabletInfoOne{
+        width: 65%;
     }
     .column.infoOne .mobileInfoOne{
         width: 60%;
@@ -236,6 +241,16 @@ hr{
     
         }
 }
+@media(max-width:340px){
+    .column.infoTwo .tabletInfoOne .textDecoration p {
+            padding: 0 40px;
+    }
+}
+@media(max-width:300px){
+    .column.infoTwo .tabletInfoOne .textDecoration p {
+            padding: 0 30px;
+    }
+}
 @media(max-width:296px){
     .textDecoration p {
         padding: 0 30px;
@@ -246,8 +261,19 @@ hr{
     .button a{
         padding: 5px 20px;
     }
+    .buttonTwo a{
+        padding: 5px 20px;
+    }
+}
+@media(max-width:270px){
+    .column.infoTwo .tabletInfoOne .textDecoration p {
+            padding: 0 10px;
+    }
 }
 @media(max-width:252px){
+    .column.infoTwo .tabletInfoOne .cost h2{
+        font-size: 30px;
+    }
     .column.infoOne .mobileInfoOne .cost h2 {
         font-size: 30px;
     }
@@ -265,6 +291,9 @@ hr{
     .buttonThree a {
         padding: 5px 10px;
     }
+    .buttonTwo a{
+        padding: 5px 10px;
+    }
 }
 @media(max-width:186px){
     .textDecoration p {
@@ -276,10 +305,16 @@ hr{
     .button a {
         padding: 5px 5px;
     }
+    .buttonTwo a{
+        padding: 5px 5px;
+    }
     .column.infoThree .mobileInfoThree .cost h2 {
         font-size: 25px;
     }
     .column.infoOne .mobileInfoOne .cost h2 {
+        font-size: 25px;
+    }
+    .column.infoThree .mobileInfoThree .cost h2{
         font-size: 25px;
     }
 }
